; ModuleID = '/home/carl/AnghaBench/freebsd/sys/arm/xilinx/extr_zy7_gpio.c_zy7_gpio_detach.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/arm/xilinx/extr_zy7_gpio.c_zy7_gpio_detach.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.zy7_gpio_softc = type { i32* }

@SYS_RES_MEMORY = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32)* @zy7_gpio_detach to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @zy7_gpio_detach(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.zy7_gpio_softc*, align 8
  store i32 %0, i32* %2, align 4
  %4 = load i32, i32* %2, align 4
  %5 = call %struct.zy7_gpio_softc* @device_get_softc(i32 %4)
  store %struct.zy7_gpio_softc* %5, %struct.zy7_gpio_softc** %3, align 8
  %6 = load i32, i32* %2, align 4
  %7 = call i32 @gpiobus_detach_bus(i32 %6)
  %8 = load %struct.zy7_gpio_softc*, %struct.zy7_gpio_softc** %3, align 8
  %9 = getelementptr inbounds %struct.zy7_gpio_softc, %struct.zy7_gpio_softc* %8, i32 0, i32 0
  %10 = load i32*, i32** %9, align 8
  %11 = icmp ne i32* %10, null
  br i1 %11, label %12, label %23

12:                                               ; preds = %1
  %13 = load i32, i32* %2, align 4
  %14 = load i32, i32* @SYS_RES_MEMORY, align 4
  %15 = load %struct.zy7_gpio_softc*, %struct.zy7_gpio_softc** %3, align 8
  %16 = getelementptr inbounds %struct.zy7_gpio_softc, %struct.zy7_gpio_softc* %15, i32 0, i32 0
  %17 = load i32*, i32** %16, align 8
  %18 = call i32 @rman_get_rid(i32* %17)
  %19 = load %struct.zy7_gpio_softc*, %struct.zy7_gpio_softc** %3, align 8
  %20 = getelementptr inbounds %struct.zy7_gpio_softc, %struct.zy7_gpio_softc* %19, i32 0, i32 0
  %21 = load i32*, i32** %20, align 8
  %22 = call i32 @bus_release_resource(i32 %13, i32 %14, i32 %18, i32* %21)
  br label %23

23:                                               ; preds = %12, %1
  %24 = load %struct.zy7_gpio_softc*, %struct.zy7_gpio_softc** %3, align 8
  %25 = call i32 @ZGPIO_LOCK_DESTROY(%struct.zy7_gpio_softc* %24)
  ret i32 0
}

declare dso_local %struct.zy7_gpio_softc* @device_get_softc(i32) #1

declare dso_local i32 @gpiobus_detach_bus(i32) #1

declare dso_local i32 @bus_release_resource(i32, i32, i32, i32*) #1

declare dso_local i32 @rman_get_rid(i32*) #1

declare dso_local i32 @ZGPIO_LOCK_DESTROY(%struct.zy7_gpio_softc*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
